Functionally complete.
At this point, the plugin can be used instead of any custom code in
the guide.

Next up, add some tests and refactor the hell out of it. Then,
we'll publish.